--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAILPASSWORD }}
-          subject: FuZhou Weather Report (${{env.REPORT_DATE}})
+          subject: 泉州 Weather Report (${{env.REPORT_DATE}})
           body: file://result.html
           to: jm1179356055@gmail.com
           from: GitHub Actions
