--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,12 @@ jobs:
       - name: 'Get Weather '
         run: bash ./weather.sh
       - name: 'Get Date'
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         run: echo "::set-env name=REPORT_DATE::$(TZ=':Asia/QuanZhou' date '+%Y-%m-%d %T')"
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master
+        
         with:
           server_address: smtp.163.com
           server_port: 465
