--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: 'Get Date'
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        run: echo "::set-env name=REPORT_DATE::$(TZ=':Asia/QuanZhou' date '+%Y-%m-%d %T')"
+        run: echo "::set-env name=REPORT_DATE::$(TZ=':Asia/XiaMen' date '+%Y-%m-%d %T')"
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master
         
@@ -25,7 +25,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAILPASSWORD }}
-          subject: 泉州 天气 Report (${{env.REPORT_DATE}})
+          subject: 厦门 天气 预报 (${{env.REPORT_DATE}})
           body: file://result.html
           to: 1179356055@qq.com
           from: GitHub Actions
