--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: 'Get Date'
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        run: echo "::set-env name=REPORT_DATE::$(TZ=':Asia/XiaMen' date '+%Y-%m-%d %T')"
+        run: echo "::set-env name=REPORT_DATE::$(TZ=':Asia/ShangHai' date '+%Y-%m-%d %T')"
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master
         
